guard, ojo contraseña

--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -11,13 +11,20 @@
   <!--FORMULARIO DE PERFIL-->
   <div *ngIf="!uid.length" class="main_content_div">
     <ion-card style="--background:  #808081; max-width: 800px; margin: auto; padding: 10px;">
-      <ion-col><ion-label class="bold_lbl">Bienvenido</ion-label></ion-col>
+      <ion-col>
+        <ion-label class="bold_lbl">Bienvenido</ion-label>
+      </ion-col>
       <!--registro-->
       <ion-card-content style="background:  #b6b6b9 ; max-width: 500px; margin: auto; border-radius: 20px;">
-       <ion-col><ion-label class="small_lbl">Ingresa tus datos</ion-label></ion-col> 
-       <ion-col><ion-input *ngIf="ingresarEnable" [(ngModel)]="cliente.nombre" placeholder="Nombre" type="text"[formControl]="nombreControl">
-          <ion-icon name="person-circle"></ion-icon>
-        </ion-input></ion-col>
+        <ion-col>
+          <ion-label class="small_lbl">Ingresa tus datos</ion-label>
+        </ion-col>
+        <ion-col>
+          <ion-input *ngIf="ingresarEnable" [(ngModel)]="cliente.nombre" placeholder="Nombre" type="text"
+            [formControl]="nombreControl">
+            <ion-icon name="person-circle"></ion-icon>
+          </ion-input>
+        </ion-col>
         <ion-col *ngIf="nombreControl.invalid && (nombreControl.dirty || nombreControl.touched)">
           <ion-label class="error-label">
             <ng-container *ngIf="nombreControl.hasError('required')">El nombre es obligatorio</ng-container>
@@ -25,9 +32,10 @@
           </ion-label>
         </ion-col>
         <ion-col>
-        <ion-input [(ngModel)]="cliente.email" placeholder="email" type="email" [formControl]="emailControl">
-          <ion-icon name="mail"></ion-icon>
-        </ion-input></ion-col>
+          <ion-input [(ngModel)]="cliente.email" placeholder="email" type="email" [formControl]="emailControl">
+            <ion-icon name="mail"></ion-icon>
+          </ion-input>
+        </ion-col>
         <ion-col *ngIf="emailControl.invalid && (emailControl.dirty || emailControl.touched)">
           <ion-icon name="alert-circle" slot="start"></ion-icon>
           <ion-label class="error-label">
@@ -36,25 +44,33 @@
             <ng-container *ngIf="emailControl.hasError('email')">Ingrese un correo electrónico válido</ng-container>
           </ion-label>
         </ion-col>
-        <ion-col><ion-input [(ngModel)]="cliente.password" placeholder="Contraseña" type="password" value="password"
+        <ion-col>
+          <ion-input [(ngModel)]="cliente.password" placeholder="Contraseña" [type]="showPassword ? 'text' : 'password'"
             id="password" [formControl]="passwordControl">
-            <ion-icon name="key"></ion-icon>
-          </ion-input></ion-col>
-          <ion-col *ngIf="passwordControl.invalid && (passwordControl.dirty || passwordControl.touched)">
-           
-            <ion-label class="error-label">
-              <ng-container *ngIf="passwordControl.hasError('required')">La contraseña es obligatoria</ng-container>
-              <ng-container *ngIf="passwordControl.hasError('minlength')">La contraseña debe tener al menos 6 caracteres
-              </ng-container>
-              <ng-container *ngIf="passwordControl.hasError('pattern')">La contraseña debe contener al menos un carácter
-                especial</ng-container>
-            </ion-label>
-          </ion-col>
-       
-        <ion-col><ion-input *ngIf="ingresarEnable" [(ngModel)]="cliente.confirmacion" placeholder="Confirmar Contraseña"
-            [formControl]="passwordControl" type="password" value="password" id="password">
-            <ion-icon name="key"></ion-icon>
-          </ion-input></ion-col>
+            <ion-icon name="eye" *ngIf="!showPassword" slot="end" (click)="togglePasswordVisibility()"></ion-icon>
+            <ion-icon name="eye-off" *ngIf="showPassword" slot="end" (click)="togglePasswordVisibility()"></ion-icon>
+          </ion-input>
+        </ion-col>
+        <ion-col *ngIf="passwordControl.invalid && (passwordControl.dirty || passwordControl.touched)">
+
+          <ion-label class="error-label">
+            <ng-container *ngIf="passwordControl.hasError('required')">La contraseña es obligatoria</ng-container>
+            <ng-container *ngIf="passwordControl.hasError('minlength')">La contraseña debe tener al menos 6 caracteres
+            </ng-container>
+            <ng-container *ngIf="passwordControl.hasError('pattern')">La contraseña debe contener al menos un carácter
+              especial</ng-container>
+          </ion-label>
+        </ion-col>
+
+        <ion-col>
+          <ion-input *ngIf="ingresarEnable" [(ngModel)]="cliente.confirmacion" placeholder="Confirmar Contraseña"
+            [type]="showConfirmPassword ? 'text' : 'password'" id="password" [formControl]="passwordControl">
+            <ion-icon name="eye" *ngIf="!showConfirmPassword" slot="end" (click)="toggleConfirmPasswordVisibility()">
+            </ion-icon>
+            <ion-icon name="eye-off" *ngIf="showConfirmPassword" slot="end" (click)="toggleConfirmPasswordVisibility()">
+            </ion-icon>
+          </ion-input>
+        </ion-col>
         <div class="custom-background">
           <ion-item *ngIf="CpasswordControl.invalid && (CpasswordControl.dirty || CpasswordControl.touched)">
             <ion-icon name="alert-circle" slot="start"></ion-icon>
@@ -71,14 +87,26 @@
         </div>
 
 
-        <ion-col> <ion-button *ngIf="ingresarEnable" (click)="registrarse()" expand="block" color="medium">registrar</ion-button></ion-col>
-        <ion-col><ion-label  *ngIf="ingresarEnable" class="small_lbl" >¿Ya tienes una
-            cuenta?</ion-label></ion-col>
-        <ion-col> <ion-button *ngIf="ingresarEnable" (click)="ingresarEnable = false" expand="block" color="medium">Iniciar</ion-button></ion-col>
-        <ion-col><ion-button *ngIf="!ingresarEnable" (click)="ingresar()" expand="block" color="medium" >Iniciar</ion-button></ion-col>
+        <ion-col>
+          <ion-button *ngIf="ingresarEnable" (click)="registrarse()" expand="block" color="medium">registrar
+          </ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-label *ngIf="ingresarEnable" class="small_lbl">¿Ya tienes una
+            cuenta?</ion-label>
+        </ion-col>
+        <ion-col>
+          <ion-button *ngIf="ingresarEnable" (click)="ingresarEnable = false" expand="block" color="medium">Iniciar
+          </ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button *ngIf="!ingresarEnable" (click)="ingresar()" expand="block" color="medium">Iniciar</ion-button>
+        </ion-col>
         <ion-label *ngIf="!ingresarEnable" class="small_lbl">¿no tienes una cuenta aun?</ion-label>
-        <ion-col><ion-button *ngIf="!ingresarEnable" (click)="ingresarEnable = true"
-            expand="block" color="medium">Registrate</ion-button></ion-col>
+        <ion-col>
+          <ion-button *ngIf="!ingresarEnable" (click)="ingresarEnable = true" expand="block" color="medium">Registrate
+          </ion-button>
+        </ion-col>
       </ion-card-content>
       <!--iniciar secion -->
 
@@ -91,22 +119,32 @@
     <ion-card style="--background:  #808081; max-width: 800px; margin: auto;">
       <div class="imgUser"> <img [src]="cliente.foto" style="border-radius: 30px;"></div>
       <ion-card-content style="max-width: 500px; margin: auto;">
-        <ion-item> <ion-label class="small_lbl">Nombre: {{cliente.nombre}}</ion-label></ion-item>
-        <ion-item> <ion-label class="small_lbl">Correo: {{cliente.email}}</ion-label></ion-item>
-        <ion-item> <ion-label class="small_lbl">Editar Foto</ion-label> <ion-buttons>
+        <ion-item>
+          <ion-label class="small_lbl">Nombre: {{cliente.nombre}}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label class="small_lbl">Correo: {{cliente.email}}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label class="small_lbl">Editar Foto</ion-label>
+          <ion-buttons>
             <ion-button>
               <label for="file-upload">
                 <ion-icon slot="icon-only" name="images-outline"></ion-icon>
               </label>
               <input (change)="newImageUpload($event)" id="file-upload" type="file" accept="image/*">
             </ion-button>
-          </ion-buttons></ion-item>
+          </ion-buttons>
+        </ion-item>
 
 
-        <ion-col> <ion-button style="margin-top: 20px;" (click)="guardarUser()" expand="block"
-            size="small">guardar</ion-button></ion-col>
-        <ion-col> <ion-button style="margin-top: 10px;" (click)="salir()" expand="block" size="small">Cerrar
-            cesion</ion-button></ion-col>
+        <ion-col>
+          <ion-button style="margin-top: 20px;" (click)="guardarUser()" expand="block" size="small">guardar</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button style="margin-top: 10px;" (click)="salir()" expand="block" size="small">Cerrar
+            cesion</ion-button>
+        </ion-col>
       </ion-card-content>
     </ion-card>
   </div>
