--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -95,10 +95,10 @@
       <!--listas de propiedades Cascada-->
       <div *ngIf="enablelista">
         <ion-card *ngFor="let P of Propiedades">
-          <ion-accordion-group [multiple]="true" [value]="['first', 'third']" >
-            <ion-accordion >
-              <ion-item slot="header" >
-                <ion-grid [fixed]="true" >
+          <ion-accordion-group [multiple]="true" [value]="['first', 'third']">
+            <ion-accordion>
+              <ion-item slot="header">
+                <ion-grid [fixed]="true">
 
                   <ion-row [ngStyle]="{'background-color':P.estado === 'Desactivada' ? 'gray' : '' }">
                     <ion-col size="auto"><ion-label>{{P.id_propiedad}}</ion-label></ion-col>
@@ -139,69 +139,107 @@
                       <ion-icon name="person-add"></ion-icon><ion-label>contacto</ion-label>
                     </ion-button>
                   </div>
-                  <div style="background: #8ea8b3; margin-bottom: 10px; padding: 10px; border-radius: 5px;">
-                    <ion-label class="bold_lbl">Cuentas</ion-label>
-                    <ion-row *ngFor="let c of filtroCuentaAgua(P.id)">
+                  <div  style="background: #8ea8b3; margin-bottom: 10px; padding: 10px; border-radius: 5px;">
+                    
+                    <ion-card>
+                   <ion-buttons slot="start">
+                      <ion-button size="small">
+                        <ion-icon name="create-outline"></ion-icon>
+                      </ion-button>
+                    </ion-buttons>
+
+                      <ion-buttons slot="end">
+                      <ion-button size="small">
+                        <ion-icon name="close"></ion-icon>
+                      </ion-button>
+                    </ion-buttons>
+                  </ion-card>
+                    <ion-grid *ngFor="let c of filtroCuentaAgua(P.id)">
+                    <ion-row >
                       <ion-col size="auto"><ion-icon name="water"></ion-icon></ion-col>
                       <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
                       <ion-col size="auto"><ion-label>Numuero Ciente:</ion-label></ion-col>
                       <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
-                      <ion-col size="auto" *ngFor="let G of filtroGasto(c.numCliente) "><ion-label>${{G.Total
-                          }}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
                     </ion-row>
-                    <ion-row *ngFor="let c of filtroCuentaLuz(P.id)">
+                    <ion-row *ngFor="let G of filtroGasto(c.numCliente)">
+                      <ion-col size="auto"><ion-label>N°: {{G.Num_documento}}</ion-label></ion-col>
+                      <ion-col size="auto"><ion-label>{{G.fecha_vencimiento}}</ion-label></ion-col>
+                      <ion-col size="auto"><ion-label>{{G.Total}}</ion-label></ion-col>
+                      <ion-col size="auto"><ion-label>{{G.Estado}}</ion-label></ion-col>
+                    </ion-row>
+                  </ion-grid>
+                  <ion-grid *ngFor="let c of filtroCuentaLuz(P.id)">
+                    <ion-row >
                       <ion-col size="auto"><ion-icon name="flash"></ion-icon></ion-col>
                       <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
                       <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
                       <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>${{G.Total}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
                     </ion-row>
-                    <ion-row *ngFor="let c of filtroCuentaGas(P.id)">
+                    <ion-row *ngFor="let G of filtroGasto(c.numCliente)">
+                      <ion-col size="auto"><ion-label>N°: {{G.Num_documento}}</ion-label></ion-col>
+                      <ion-col size="auto"><ion-label>{{G.fecha_vencimiento}}</ion-label></ion-col>
+                      <ion-col size="auto"><ion-label>{{G.Total}}</ion-label></ion-col>
+                      <ion-col size="auto"><ion-label>{{G.Estado}}</ion-label></ion-col>
+                    </ion-row>
+                  </ion-grid>
+                  <ion-grid *ngFor="let c of filtroCuentaGas(P.id)">
+                    <ion-row >
                       <ion-col size="auto"><ion-icon name="flame"></ion-icon></ion-col>
                       <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
                       <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
                       <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>${{G.Total}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
                     </ion-row>
-                    <ion-row *ngFor="let c of filtroCuentaInternet(P.id)">
+                    <ion-row *ngFor="let G of filtroGasto(c.numCliente)">
+                      <ion-col size="auto"><ion-label>N°: {{G.Num_documento}}</ion-label></ion-col>
+                      <ion-col size="auto"><ion-label>{{G.fecha_vencimiento}}</ion-label></ion-col>
+                      <ion-col size="auto"><ion-label>{{G.Total}}</ion-label></ion-col>
+                      <ion-col size="auto"><ion-label>{{G.Estado}}</ion-label></ion-col>
+                    </ion-row>
+                  </ion-grid>
+                  <ion-grid *ngFor="let c of filtroCuentaInternet(P.id)">
+                    <ion-row >
                       <ion-col size="auto"><ion-icon name="globe"></ion-icon></ion-col>
                       <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
                       <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
                       <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>${{G.Total}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
                     </ion-row>
-                    <ion-row *ngFor="let c of filtroCuentaArriendo(P.id)">
+                      <ion-row *ngFor="let G of filtroGasto(c.numCliente)">
+                        <ion-col size="auto"><ion-label>N°: {{G.Num_documento}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>{{G.fecha_vencimiento}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>{{G.Total}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>{{G.Estado}}</ion-label></ion-col>
+                    </ion-row>
+                  </ion-grid>
+                  <ion-grid *ngFor="let c of filtroCuentaArriendo(P.id)">
+                    <ion-row >
                       <ion-col size="auto"><ion-icon name="business-outline"></ion-icon></ion-col>
                       <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
                       <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
                       <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>${{G.Total}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
                     </ion-row>
-                    <ion-row *ngFor="let c of filtroCuentaGGCC(P.id)">
+                    <ion-row *ngFor="let G of filtroGasto(c.numCliente)">
+                      <ion-col size="auto"><ion-label>N°: {{G.Num_documento}}</ion-label></ion-col>
+                      <ion-col size="auto"><ion-label>Fecha Vcto:{{G.fecha_vencimiento}}</ion-label></ion-col>
+                      <ion-col size="auto"><ion-label>${{G.Total}}</ion-label></ion-col>
+                      <ion-col size="auto"><ion-label style="padding-left: 5px; padding-right: 5px; border-radius: 5px;" [ngStyle]="{'background-color':G.Estado === 'Vencida' ? 'red' : 'green'}">{{G.Estado}}</ion-label></ion-col>
+                  </ion-row>
+                  </ion-grid>
+                  <ion-grid  *ngFor="let c of filtroCuentaGGCC(P.id)">
+                    <ion-row >
                       <ion-col size="auto"><ion-icon name="newspaper-outline"></ion-icon></ion-col>
                       <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
                       <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
                       <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>${{G.Total}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
                     </ion-row>
-                    <ion-col *ngFor="let gastos of gastos" size="auto"><ion-label></ion-label></ion-col>
+                      <ion-row *ngFor="let G of filtroGasto(c.numCliente)">
+                        <ion-col size="auto"><ion-label>N°: {{G.Num_documento}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>Vencimiento:{{G.fecha_vencimiento}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>${{G.Total}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>{{G.Estado}}</ion-label></ion-col>
+                    </ion-row>
+                  </ion-grid>
+
+                  
                     <ion-button [routerLink]="['/cuentas']" (click)="addContacto(P)" color="primary" size="small"
                       style="margin: 5px;">
                       <ion-icon name="add-circle-outline"></ion-icon><ion-label>Cuentas</ion-label>
