--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <ion-app>
 
-<!--asignacion de menu-->
+  <!--asignacion de menu-->
 
 
 
 
 
-<!--asignacion de menu-->
+  <!--asignacion de menu-->
 
 
   <ion-split-pane contentId="main">
@@ -37,7 +37,7 @@
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle autoHide="false">
-          <ion-item button="true" detail="true" [routerLink]="['/soporte']">
+          <ion-item button="true" detail="true" [routerLink]="['SoporteComponent']">
             <ion-label>soporte</ion-label>
             <ion-icon slot="start" name="information-circle-outline"></ion-icon>
           </ion-item>
