--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,28 +1,28 @@
 ion-content {
-    --background:  #8e8e94;
+    --background:  #88C7C3;
 }
 ion-header {
-    --background:   #7b7b83;
+    --background:   #88C7C3;
 }
 ion-footer{
-    --background:   #7b7b83;
+    --background:   #88C7C3;
 }
 
 
 ion-content {
     width: 100%;
-    --background:  #a6a6a8;
+    --background:  #88c7c3;
 }
 
 
 
 ion-toolbar{
-     --background:  #b6b6b9;
+     --background:  #79b1ad;
       padding: 10px;
 }
 
 ion-item{
-    --background:  #b6b6b9;
+    --background:  #79b1ad;
    
 }
 ion-card{
@@ -56,7 +56,7 @@ ion-card{
     }
 ion-input {
         margin: auto;
-        background: rgba(70, 65, 69, 0.3);
+        background: #c4c4c4;
         border-radius: 5px;
         color: white;
 ion-icon {
