--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -116,7 +116,7 @@
   </div>
   <!--perfil del usuario-->
   <div *ngIf="uid.length" class="main_content_div">
-    <ion-card style="--background:  #808081; max-width: 800px; margin: auto;">
+    <ion-card style="--background:  #DDDDDD; max-width: 800px; margin: auto;">
       <div class="imgUser"> <img [src]="cliente.foto" style="border-radius: 30px;"></div>
       <ion-card-content style="max-width: 500px; margin: auto;">
         <ion-item>
