--- a/src/app/pages/perfil/perfil.component.scss
+++ b/src/app/pages/perfil/perfil.component.scss
@@ -50,5 +50,5 @@ ion-col .small_lbl{
 }
 
 .custom-background {
-  background-color: #f2f2f2; /* Cambia este color por el gris deseado */
+  background-color: #F6F6F6; /* Cambia este color por el gris deseado */
 }
