--- a/src/app/backend/contacto/contacto.component.html
+++ b/src/app/backend/contacto/contacto.component.html
@@ -9,57 +9,79 @@
 
 <ion-content>
   <div class="main_content_div">
-    <ion-card *ngIf="P" style="--background:  #808081; max-width: 800px; margin: auto;">
+    <ion-card *ngIf="P" style="--background:  #DDDDDD; max-width: 800px; margin: auto;">
       <ion-card-content style="   max-width: 650px; margin: auto;">
         <ion-label class="bold_lbl">Agregar nuevo Contacto</ion-label>
         <ion-item>
-          <ion-col size="auto"><ion-label>{{P.id_propiedad}}</ion-label></ion-col>
+          <ion-col size="auto">
+            <ion-label>{{P.id_propiedad}}</ion-label>
+          </ion-col>
         </ion-item>
         <ion-item slot="header">
           <ion-grid [fixed]="true">
             <ion-row>
-              <ion-col size="auto"><ion-icon name="home"></ion-icon></ion-col>
-              <ion-col size="auto"><ion-label>{{P.tipo}}</ion-label></ion-col>
-              <ion-col size="auto"><ion-label>{{P.numero}},</ion-label></ion-col>
-              <ion-col size="auto"><ion-label>{{P.direccion}},</ion-label></ion-col>
-              <ion-col size="auto"><ion-label>{{P.comuna}}</ion-label></ion-col>
+              <ion-col size="auto">
+                <ion-icon name="home"></ion-icon>
+              </ion-col>
+              <ion-col size="auto">
+                <ion-label>{{P.tipo}}</ion-label>
+              </ion-col>
+              <ion-col size="auto">
+                <ion-label>{{P.numero}},</ion-label>
+              </ion-col>
+              <ion-col size="auto">
+                <ion-label>{{P.direccion}},</ion-label>
+              </ion-col>
+              <ion-col size="auto">
+                <ion-label>{{P.comuna}}</ion-label>
+              </ion-col>
             </ion-row>
           </ion-grid>
         </ion-item>
 
         <ion-item>
-          <ion-col size="auto"><ion-label>Nombre</ion-label></ion-col>
+          <ion-col size="auto">
+            <ion-label>Nombre</ion-label>
+          </ion-col>
           <ion-col>
-            <ion-input [(ngModel)]="newContacto.nombre" placeholder="Nombre" name="name" type="text"
-              inputmode="text"></ion-input>
+            <ion-input [(ngModel)]="newContacto.nombre" placeholder="Nombre" name="name" type="text" inputmode="text">
+            </ion-input>
           </ion-col>
         </ion-item>
         <ion-item>
-          <ion-col size="auto"><ion-label>Apellido Paterno</ion-label></ion-col>
+          <ion-col size="auto">
+            <ion-label>Apellido Paterno</ion-label>
+          </ion-col>
           <ion-col>
             <ion-input [(ngModel)]="newContacto.apellidop" placeholder="Apellido paterno" name="apellido paterno"
               type="text" inputmode="text"></ion-input>
           </ion-col>
         </ion-item>
         <ion-item>
-          <ion-col size="auto"><ion-label>Apellido Materno</ion-label></ion-col>
+          <ion-col size="auto">
+            <ion-label>Apellido Materno</ion-label>
+          </ion-col>
           <ion-col>
             <ion-input [(ngModel)]="newContacto.apellidom" placeholder="Apellido materno" name="apelllido materno"
               type="text" inputmode="text"></ion-input>
           </ion-col>
         </ion-item>
         <ion-item>
-          <ion-col size="auto"><ion-label>Telefono +56</ion-label></ion-col>
+          <ion-col size="auto">
+            <ion-label>Telefono +56</ion-label>
+          </ion-col>
           <ion-col>
-            <ion-input [(ngModel)]="newContacto.telefono" placeholder="000000000" type="phone"
-              inputmode="phone"></ion-input>
+            <ion-input [(ngModel)]="newContacto.telefono" placeholder="000000000" type="phone" inputmode="phone">
+            </ion-input>
           </ion-col>
         </ion-item>
         <ion-item>
-          <ion-col size="auto"><ion-label>Rut</ion-label></ion-col>
+          <ion-col size="auto">
+            <ion-label>Rut</ion-label>
+          </ion-col>
           <ion-col>
-            <ion-input [(ngModel)]="newContacto.rut" placeholder="Rut" name="rut" type="text"
-              inputmode="text"></ion-input>
+            <ion-input [(ngModel)]="newContacto.rut" placeholder="Rut" name="rut" type="text" inputmode="text">
+            </ion-input>
           </ion-col>
         </ion-item>
         <ion-item>
@@ -82,24 +104,30 @@
 
         <p *ngIf="tiporazon == 'empresa'">
           <ion-item>
-            <ion-col size="auto"><ion-label>Giro</ion-label></ion-col>
+            <ion-col size="auto">
+              <ion-label>Giro</ion-label>
+            </ion-col>
             <ion-col>
               <ion-input [(ngModel)]="newContacto.giro" placeholder="Giro empresa" name="giro" type="text"
                 inputmode="text"></ion-input>
             </ion-col>
           </ion-item>
           <ion-item>
-            <ion-col size="auto"><ion-label>Correo</ion-label></ion-col>
+            <ion-col size="auto">
+              <ion-label>Correo</ion-label>
+            </ion-col>
             <ion-col>
-              <ion-input [(ngModel)]="newContacto.email" placeholder="email" name="mail" type="email"
-                inputmode="text"></ion-input>
+              <ion-input [(ngModel)]="newContacto.email" placeholder="email" name="mail" type="email" inputmode="text">
+              </ion-input>
             </ion-col>
           </ion-item>
           <ion-item>
-            <ion-col size="auto"><ion-label>Direccion</ion-label></ion-col>
+            <ion-col size="auto">
+              <ion-label>Direccion</ion-label>
+            </ion-col>
             <ion-col>
-              <ion-input [(ngModel)]="newContacto.direccion" placeholder="av. ejemplo" type="text"
-                inputmode="text"></ion-input>
+              <ion-input [(ngModel)]="newContacto.direccion" placeholder="av. ejemplo" type="text" inputmode="text">
+              </ion-input>
             </ion-col>
           </ion-item>
           <ion-item>
