--- a/src/app/backend/estado/estado.component.html
+++ b/src/app/backend/estado/estado.component.html
@@ -92,11 +92,11 @@
         <ion-accordion *ngFor="let P of Estado">
           <ion-item slot="header" color="secondary">
             <ion-col>
-              <ion-label>{{P.ventanas}}</ion-label>
+              <ion-label>Estado de propiedad: {{P.paredes}}</ion-label>
             </ion-col>
             <ion-col>
               <ion-label>
-                <ion-label>{{P.paredes}}</ion-label>
+                <ion-label></ion-label>
               </ion-label>
             </ion-col>
           </ion-item>
