--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -17,7 +17,7 @@
 <ion-content>
   <!--este div contiene todo -->
   <div class="main_content_div">
-    <ion-card style="--background:  #808081; max-width: 800px; margin: auto;">
+    <ion-card style="--background:  #DDDDDD; max-width: 800px; margin: auto;">
       <!--CABECERA -->
       <ion-card-header>
         <!--btn agregrar  -->
@@ -34,7 +34,9 @@
       <!--contenedor de agregar-->
       <ion-card-content *ngIf="enableNewPropiedad">
         <ion-item>
-          <ion-col size="auto"><ion-label>Id Propiedad</ion-label></ion-col>
+          <ion-col size="auto">
+            <ion-label>Id Propiedad</ion-label>
+          </ion-col>
           <ion-col>
             <ion-input [(ngModel)]="newPropiedad.id_propiedad" placeholder="PROP0001" name="ID" type="text"
               inputmode="text"></ion-input>
@@ -60,10 +62,12 @@
           </ion-select>
         </ion-item>
         <ion-item>
-          <ion-col size="auto"><ion-label>Direccion</ion-label></ion-col>
+          <ion-col size="auto">
+            <ion-label>Direccion</ion-label>
+          </ion-col>
           <ion-col>
-            <ion-input [(ngModel)]="newPropiedad.direccion" placeholder="av. ejemplo" type="text"
-              inputmode="text"></ion-input>
+            <ion-input [(ngModel)]="newPropiedad.direccion" placeholder="av. ejemplo" type="text" inputmode="text">
+            </ion-input>
           </ion-col>
         </ion-item>
         <ion-item>
@@ -75,13 +79,17 @@
           </ion-select>
         </ion-item>
         <ion-item>
-          <ion-col size="auto"><ion-label>numero</ion-label></ion-col>
+          <ion-col size="auto">
+            <ion-label>numero</ion-label>
+          </ion-col>
           <ion-col>
             <ion-input [(ngModel)]="newPropiedad.numero" type="number"></ion-input>
           </ion-col>
         </ion-item>
         <ion-item>
-          <ion-col size="auto"><ion-label>Referencia</ion-label></ion-col>
+          <ion-col size="auto">
+            <ion-label>Referencia</ion-label>
+          </ion-col>
           <ion-col>
             <ion-input [(ngModel)]="newPropiedad.referencia" placeholder="Referencia" name="referencia" type="text"
               inputmode="text"></ion-input>
@@ -95,18 +103,30 @@
       <!--listas de propiedades Cascada-->
       <div *ngIf="enablelista">
         <ion-card *ngFor="let P of Propiedades">
-          <ion-accordion-group [multiple]="true" [value]="['first', 'third']" >
-            <ion-accordion >
-              <ion-item slot="header" >
-                <ion-grid [fixed]="true" >
+          <ion-accordion-group [multiple]="true" [value]="['first', 'third']">
+            <ion-accordion>
+              <ion-item slot="header">
+                <ion-grid [fixed]="true">
 
                   <ion-row [ngStyle]="{'background-color':P.estado === 'Desactivada' ? 'gray' : '' }">
-                    <ion-col size="auto"><ion-label>{{P.id_propiedad}}</ion-label></ion-col>
-                    <ion-col size="auto"><ion-icon name="home"></ion-icon></ion-col>
-                    <ion-col size="auto"><ion-label>{{P.tipo}}</ion-label></ion-col>
-                    <ion-col size="auto"><ion-label>{{P.numero}},</ion-label></ion-col>
-                    <ion-col size="auto"><ion-label>{{P.direccion}},</ion-label></ion-col>
-                    <ion-col size="auto"><ion-label>{{P.comuna}}</ion-label></ion-col>
+                    <ion-col size="auto">
+                      <ion-label>{{P.id_propiedad}}</ion-label>
+                    </ion-col>
+                    <ion-col size="auto">
+                      <ion-icon name="home"></ion-icon>
+                    </ion-col>
+                    <ion-col size="auto">
+                      <ion-label>{{P.tipo}}</ion-label>
+                    </ion-col>
+                    <ion-col size="auto">
+                      <ion-label>{{P.numero}},</ion-label>
+                    </ion-col>
+                    <ion-col size="auto">
+                      <ion-label>{{P.direccion}},</ion-label>
+                    </ion-col>
+                    <ion-col size="auto">
+                      <ion-label>{{P.comuna}}</ion-label>
+                    </ion-col>
 
                   </ion-row>
 
@@ -120,15 +140,24 @@
                       cancelTex="Cancelar" interface="popover">
                       <ion-select-option value="Activa">Activa</ion-select-option>
                       <ion-select-option value="Desactivada">Desactivada</ion-select-option>
-                    </ion-select></ion-item>
+                    </ion-select>
+                  </ion-item>
                   <!--detalles de contacto -->
-                  <div style="background: #8ea8b3; margin-bottom: 10px; padding: 10px; border-radius: 5px;">
+                  <div style="background: #c4c4c4; margin-bottom: 10px; padding: 10px; border-radius: 5px;">
                     <ion-label class="bold_lbl">Contactos</ion-label>
                     <ion-row *ngFor="let c of filtroContacto(P.id)">
-                      <ion-col size="auto"> <ion-label> <ion-icon name="person-circle"></ion-icon> {{c.nombre}}
-                          {{c.apellidop}} {{c.apellidom}}</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label><ion-icon name="call"></ion-icon>
-                          {{c.telefono}}</ion-label></ion-col>
+                      <ion-col size="auto">
+                        <ion-label>
+                          <ion-icon name="person-circle"></ion-icon> {{c.nombre}}
+                          {{c.apellidop}} {{c.apellidom}}
+                        </ion-label>
+                      </ion-col>
+                      <ion-col size="auto">
+                        <ion-label>
+                          <ion-icon name="call"></ion-icon>
+                          {{c.telefono}}
+                        </ion-label>
+                      </ion-col>
                       <ion-button href="https://api.whatsapp.com/send?phone=56{{c.telefono}}&text=" color="success"
                         size="small" style="margin: 5px;">
                         <ion-icon name="logo-whatsapp"></ion-icon>
@@ -136,94 +165,166 @@
                     </ion-row>
                     <ion-button [routerLink]="['/contacto']" (click)="addContacto(P)" color="secondary" size="small"
                       style="margin: 5px;">
-                      <ion-icon name="person-add"></ion-icon><ion-label>contacto</ion-label>
+                      <ion-icon name="person-add"></ion-icon>
+                      <ion-label>contacto</ion-label>
                     </ion-button>
                   </div>
-                  <div style="background: #8ea8b3; margin-bottom: 10px; padding: 10px; border-radius: 5px;">
+                  <div style="background: #c4c4c4; margin-bottom: 10px; padding: 10px; border-radius: 5px;">
                     <ion-label class="bold_lbl">Cuentas</ion-label>
                     <ion-row *ngFor="let c of filtroCuentaAgua(P.id)">
-                      <ion-col size="auto"><ion-icon name="water"></ion-icon></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>Numuero Ciente:</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
-                      <ion-col size="auto" *ngFor="let G of filtroGasto(c.numCliente) "><ion-label>${{G.Total
-                          }}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
+                      <ion-col size="auto">
+                        <ion-icon name="water"></ion-icon>
+                      </ion-col>
+                      <ion-col size="auto">
+                        <ion-label>{{c.empresa}}</ion-label>
+                      </ion-col>
+                      <ion-col size="auto">
+                        <ion-label>Numuero Ciente:</ion-label>
+                      </ion-col>
+                      <ion-col size="auto">
+                        <ion-label>{{c.numCliente}}</ion-label>
+                      </ion-col>
+                      <ion-col size="auto" *ngFor="let G of filtroGasto(c.numCliente) ">
+                        <ion-label>${{G.Total
+                          }}</ion-label>
+                      </ion-col>
+                      <ion-col size="auto" *ngFor="let G of filtroGasto(c.numCliente)">
+                        <ion-label>{{G.Estado}}</ion-label>
+                      </ion-col>
                     </ion-row>
                     <ion-row *ngFor="let c of filtroCuentaLuz(P.id)">
-                      <ion-col size="auto"><ion-icon name="flash"></ion-icon></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>${{G.Total}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
+                      <ion-col size="auto">
+                        <ion-icon name="flash"></ion-icon>
+                      </ion-col>
+                      <ion-col size="auto">
+                        <ion-label>{{c.empresa}}</ion-label>
+                      </ion-col>
+                      <ion-col size="auto">
+                        <ion-label>Numero Ciente:</ion-label>
+                      </ion-col>
+                      <ion-col size="auto">
+                        <ion-label>{{c.numCliente}}</ion-label>
+                      </ion-col>
+                      <ion-col size="auto" *ngFor="let G of filtroGasto(c.numCliente)">
+                        <ion-label>${{G.Total}}</ion-label>
+                      </ion-col>
+                      <ion-col size="auto" *ngFor="let G of filtroGasto(c.numCliente)">
+                        <ion-label>{{G.Estado}}</ion-label>
+                      </ion-col>
                     </ion-row>
                     <ion-row *ngFor="let c of filtroCuentaGas(P.id)">
-                      <ion-col size="auto"><ion-icon name="flame"></ion-icon></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>${{G.Total}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
+                      <ion-col size="auto">
+                        <ion-icon name="flame"></ion-icon>
+                      </ion-col>
+                      <ion-col size="auto">
+                        <ion-label>{{c.empresa}}</ion-label>
+                      </ion-col>
+                      <ion-col size="auto">
+                        <ion-label>Numero Ciente:</ion-label>
+                      </ion-col>
+                      <ion-col size="auto">
+                        <ion-label>{{c.numCliente}}</ion-label>
+                      </ion-col>
+                      <ion-col size="auto" *ngFor="let G of filtroGasto(c.numCliente)">
+                        <ion-label>${{G.Total}}</ion-label>
+                      </ion-col>
+                      <ion-col size="auto" *ngFor="let G of filtroGasto(c.numCliente)">
+                        <ion-label>{{G.Estado}}</ion-label>
+                      </ion-col>
                     </ion-row>
                     <ion-row *ngFor="let c of filtroCuentaInternet(P.id)">
-                      <ion-col size="auto"><ion-icon name="globe"></ion-icon></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>${{G.Total}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
+                      <ion-col size="auto">
+                        <ion-icon name="globe"></ion-icon>
+                      </ion-col>
+                      <ion-col size="auto">
+                        <ion-label>{{c.empresa}}</ion-label>
+                      </ion-col>
+                      <ion-col size="auto">
+                        <ion-label>Numero Ciente:</ion-label>
+                      </ion-col>
+                      <ion-col size="auto">
+                        <ion-label>{{c.numCliente}}</ion-label>
+                      </ion-col>
+                      <ion-col size="auto" *ngFor="let G of filtroGasto(c.numCliente)">
+                        <ion-label>${{G.Total}}</ion-label>
+                      </ion-col>
+                      <ion-col size="auto" *ngFor="let G of filtroGasto(c.numCliente)">
+                        <ion-label>{{G.Estado}}</ion-label>
+                      </ion-col>
                     </ion-row>
                     <ion-row *ngFor="let c of filtroCuentaArriendo(P.id)">
-                      <ion-col size="auto"><ion-icon name="business-outline"></ion-icon></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>${{G.Total}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
+                      <ion-col size="auto">
+                        <ion-icon name="business-outline"></ion-icon>
+                      </ion-col>
+                      <ion-col size="auto">
+                        <ion-label>{{c.empresa}}</ion-label>
+                      </ion-col>
+                      <ion-col size="auto">
+                        <ion-label>Numero Ciente:</ion-label>
+                      </ion-col>
+                      <ion-col size="auto">
+                        <ion-label>{{c.numCliente}}</ion-label>
+                      </ion-col>
+                      <ion-col size="auto" *ngFor="let G of filtroGasto(c.numCliente)">
+                        <ion-label>${{G.Total}}</ion-label>
+                      </ion-col>
+                      <ion-col size="auto" *ngFor="let G of filtroGasto(c.numCliente)">
+                        <ion-label>{{G.Estado}}</ion-label>
+                      </ion-col>
                     </ion-row>
                     <ion-row *ngFor="let c of filtroCuentaGGCC(P.id)">
-                      <ion-col size="auto"><ion-icon name="newspaper-outline"></ion-icon></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>${{G.Total}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
+                      <ion-col size="auto">
+                        <ion-icon name="newspaper-outline"></ion-icon>
+                      </ion-col>
+                      <ion-col size="auto">
+                        <ion-label>{{c.empresa}}</ion-label>
+                      </ion-col>
+                      <ion-col size="auto">
+                        <ion-label>Numero Ciente:</ion-label>
+                      </ion-col>
+                      <ion-col size="auto">
+                        <ion-label>{{c.numCliente}}</ion-label>
+                      </ion-col>
+                      <ion-col size="auto" *ngFor="let G of filtroGasto(c.numCliente)">
+                        <ion-label>${{G.Total}}</ion-label>
+                      </ion-col>
+                      <ion-col size="auto" *ngFor="let G of filtroGasto(c.numCliente)">
+                        <ion-label>{{G.Estado}}</ion-label>
+                      </ion-col>
                     </ion-row>
-                    <ion-col *ngFor="let gastos of gastos" size="auto"><ion-label></ion-label></ion-col>
+                    <ion-col *ngFor="let gastos of gastos" size="auto">
+                      <ion-label></ion-label>
+                    </ion-col>
                     <ion-button [routerLink]="['/cuentas']" (click)="addContacto(P)" color="primary" size="small"
                       style="margin: 5px;">
-                      <ion-icon name="add-circle-outline"></ion-icon><ion-label>Cuentas</ion-label>
+                      <ion-icon name="add-circle-outline"></ion-icon>
+                      <ion-label>Cuentas</ion-label>
                     </ion-button>
                   </div>
                   <ion-row>
-                    <ion-col size="auto"> <ion-button size="small" color="dark">
+                    <ion-col size="auto">
+                      <ion-button size="small" color="dark">
                         <ion-label>Finalizar Arriendo</ion-label>
-                      </ion-button></ion-col>
-                    <ion-col size="auto"> <ion-button size="small" color="dark">
+                      </ion-button>
+                    </ion-col>
+                    <ion-col size="auto">
+                      <ion-button size="small" color="dark">
                         <ion-label>Nuevo Arrendatario</ion-label>
-                      </ion-button></ion-col>
-                    <ion-col size="auto"><ion-button size="small" color="dark">
+                      </ion-button>
+                    </ion-col>
+                    <ion-col size="auto">
+                      <ion-button size="small" color="dark">
                         <ion-label>Condicion del inmueble</ion-label>
-                      </ion-button></ion-col>
+                      </ion-button>
+                    </ion-col>
                   </ion-row>
                   <ion-row>
                     <ion-col size="auto">
                       <ion-button (click)="newPropiedad = P; enableNewPropiedad = true; enablelista = false "
                         color="warning" size="small">
                         <ion-icon name="create-outline"></ion-icon>
-                      </ion-button></ion-col>
+                      </ion-button>
+                    </ion-col>
                     <ion-col size="auto">
                       <ion-button (click)="deletePropiedad(P)" color="danger" size="small">
                         <ion-icon name="trash-outline"></ion-icon>
