--- a/src/app/backend/soporte/soporte.component.scss
+++ b/src/app/backend/soporte/soporte.component.scss
@@ -1,6 +1,6 @@
 .soporte-card {
-  --ion-background-color: #f5f5f5;
-  --ion-border-color: #ddd;
+  --ion-background-color: #;
+  --ion-border-color: #ecedf8;
 }
 
 .button-container {
