--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,9 +31,15 @@
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle autoHide="false">
-          <ion-item button="true" detail="true" [routerLink]="['/cuentas']">
+          <ion-item button="true" detail="true" [routerLink]="['/allcuentas']">
             <ion-label>Cuentas</ion-label>
             <ion-icon slot="start" name="cash-outline"></ion-icon>
+          </ion-item>
+        </ion-menu-toggle>
+        <ion-menu-toggle autoHide="false">
+          <ion-item button="true" detail="true" [routerLink]="['/estados']">
+            <ion-label>Estados Inmueble</ion-label>
+            <ion-icon  slot="start"name="create-outline"></ion-icon>
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle autoHide="false">
