--- a/src/app/backend/allcuentas/allcuentas.component.html
+++ b/src/app/backend/allcuentas/allcuentas.component.html
@@ -3,9 +3,9 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-input type="text" placeholder="Buscar propiedades" [(ngModel)]="searchTerm"></ion-input>
+    <ion-input type="text" placeholder="Buscar propiedades" ></ion-input>
     <ion-buttons slot="end">
-      <ion-button (click)="filterProperties()">
+      <ion-button >
         <ion-icon name="search-outline"></ion-icon>
       </ion-button>
 
@@ -17,8 +17,8 @@
   <div class="main_content_div">
 
 
-    <div *ngFor="let propiedad of filteredProperties">
-      <app-propiedad [propiedad]="propiedad"></app-propiedad>
-    </div>
+  <!--  <div *ngFor="let cuentas of cuentas" >
+      <app-cuenta [cuentas]="cuentas"></app-cuenta>
+    </div>-->
   </div>
 </ion-content>
