--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -135,9 +135,13 @@
                       style="margin: 5px;">
                       <ion-icon name="person-add"></ion-icon><ion-label>contacto</ion-label>
                     </ion-button>
+                    <ion-button  color="primary"  size="small"
+                    style="margin: 5px;">
+                    <ion-icon name="person-add"></ion-icon><ion-label>Ver mas</ion-label>
+                  </ion-button>
                   </div>
                   <div  *ngIf="P.estado == 'Activa'"  style="background: #8ea8b3; margin-bottom: 10px; padding: 10px; border-radius: 5px;">
-                    <ion-label class="bold_lbl">Contactos</ion-label>
+                    <ion-label class="bold_lbl">Cuentas</ion-label>
                     <ion-grid *ngFor="let c of filtroCuentaAgua(P.id)">
                       <ion-row>
                         <ion-col size="auto"><ion-icon name="water"></ion-icon></ion-col>
@@ -145,7 +149,7 @@
                         <ion-col size="auto"><ion-label>Numuero Ciente:</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       </ion-row>
-                      <ion-row *ngFor="let G of filtroGasto(c.numCliente)">
+                      <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
                         <ion-col size="auto"><ion-label>N°: {{G.Num_documento}}</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>Vcto: {{G.fecha_vencimiento}}</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>${{G.Total}}</ion-label></ion-col>
@@ -162,7 +166,7 @@
                         <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       </ion-row>
-                      <ion-row *ngFor="let G of filtroGasto(c.numCliente)">
+                      <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
                         <ion-col size="auto"><ion-label>N°: {{G.Num_documento}}</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>Vcto: {{G.fecha_vencimiento}}</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>${{G.Total}}</ion-label></ion-col>
@@ -179,7 +183,7 @@
                         <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       </ion-row>
-                      <ion-row *ngFor="let G of filtroGasto(c.numCliente)">
+                      <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
                         <ion-col size="auto"><ion-label>N°: {{G.Num_documento}}</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>Vcto: {{G.fecha_vencimiento}}</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>${{G.Total}}</ion-label></ion-col>
@@ -196,7 +200,7 @@
                         <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       </ion-row>
-                      <ion-row *ngFor="let G of filtroGasto(c.numCliente)">
+                      <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
                         <ion-col size="auto"><ion-label>N°: {{G.Num_documento}}</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>Vcto: {{G.fecha_vencimiento}}</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>${{G.Total}}</ion-label></ion-col>
@@ -213,7 +217,7 @@
                         <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       </ion-row>
-                      <ion-row *ngFor="let G of filtroGasto(c.numCliente)">
+                      <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
                         <ion-col size="auto"><ion-label>N°: {{G.Num_documento}}</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>Vcto: {{G.fecha_vencimiento}}</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>${{G.Total}}</ion-label></ion-col>
@@ -230,7 +234,7 @@
                         <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       </ion-row>
-                      <ion-row *ngFor="let G of filtroGasto(c.numCliente)">
+                      <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
                         <ion-col size="auto"><ion-label>N°: {{G.Num_documento}}</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>Vcto:{{G.fecha_vencimiento}}</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>${{G.Total}}</ion-label></ion-col>
@@ -240,10 +244,14 @@
                             {{G.Estado}}</ion-label></ion-col>
                       </ion-row>
                     </ion-grid>
-                    <ion-button [routerLink]="['/cuentas']" (click)="addContacto(P)" color="primary" size="small"
+                    <ion-button [routerLink]="['/cuentas']" (click)="addContacto(P)"color="secondary" size="small"
                       style="margin: 5px;">
                       <ion-icon name="add-circle-outline"></ion-icon><ion-label>Cuentas</ion-label>
                     </ion-button>
+                    <ion-button   color="primary"  size="small"
+                    style="margin: 5px;">
+                    <ion-icon name="add-circle-outline"></ion-icon><ion-label>Ver mas</ion-label>
+                  </ion-button>
                   </div>
                   <ion-row  *ngIf="P.estado == 'Activa'" >
                     <ion-col size="auto"> <ion-button size="small" color="dark">
