--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -103,11 +103,10 @@
       <!--listas de propiedades Cascada-->
       <div *ngIf="enablelista">
         <ion-card *ngFor="let P of Propiedades">
-          <ion-accordion-group [multiple]="true" [value]="['first', 'third']" >
-            <ion-accordion >
-              <ion-item slot="header" >
-                <ion-grid [fixed]="true" >
-
+          <ion-accordion-group [multiple]="true" [value]="['first', 'third']">
+            <ion-accordion>
+              <ion-item slot="header">
+                <ion-grid [fixed]="true">
                   <ion-row [ngStyle]="{'background-color':P.estado === 'Desactivada' ? 'gray' : '' }">
                     <ion-col size="auto"><ion-label>{{P.id_propiedad}}</ion-label></ion-col>
                     <ion-col size="auto"><ion-icon name="home"></ion-icon></ion-col>
@@ -115,7 +114,6 @@
                     <ion-col size="auto"><ion-label>{{P.numero}},</ion-label></ion-col>
                     <ion-col size="auto"><ion-label>{{P.direccion}},</ion-label></ion-col>
                     <ion-col size="auto"><ion-label>{{P.comuna}}</ion-label></ion-col>
-
                   </ion-row>
                 </ion-grid>
               </ion-item>
@@ -127,22 +125,15 @@
                       <ion-select-option value="Activa">Activa</ion-select-option>
                       <ion-select-option value="Desactivada">Desactivada</ion-select-option>
                     </ion-select></ion-item>
+                
                   <!--detalles de contacto -->
-                  <div style="background: #8ea8b3; margin-bottom: 10px; padding: 10px; border-radius: 5px;">
+                  <div  *ngIf="P.estado == 'Activa'" style="background: #8ea8b3; margin-bottom: 10px; padding: 10px; border-radius: 5px;">
                     <ion-label class="bold_lbl">Contactos</ion-label>
                     <ion-row *ngFor="let c of filtroContacto(P.id)">
-                      <ion-col size="auto">
-                        <ion-label>
-                          <ion-icon name="person-circle"></ion-icon> {{c.nombre}}
-                          {{c.apellidop}} {{c.apellidom}}
-                        </ion-label>
-                      </ion-col>
-                      <ion-col size="auto">
-                        <ion-label>
-                          <ion-icon name="call"></ion-icon>
-                          {{c.telefono}}
-                        </ion-label>
-                      </ion-col>
+                      <ion-col size="auto"> <ion-label> <ion-icon name="person-circle"></ion-icon> {{c.nombre}}
+                          {{c.apellidop}} {{c.apellidom}}</ion-label></ion-col>
+                      <ion-col size="auto"><ion-label><ion-icon name="call"></ion-icon>
+                          {{c.telefono}}</ion-label></ion-col>
                       <ion-button href="https://api.whatsapp.com/send?phone=56{{c.telefono}}&text=" color="success"
                         size="small" style="margin: 5px;">
                         <ion-icon name="logo-whatsapp"></ion-icon>
@@ -150,110 +141,135 @@
                     </ion-row>
                     <ion-button [routerLink]="['/contacto']" (click)="addContacto(P)" color="secondary" size="small"
                       style="margin: 5px;">
-                      <ion-icon name="person-add"></ion-icon>
-                      <ion-label>contacto</ion-label>
+                      <ion-icon name="person-add"></ion-icon><ion-label>contacto</ion-label>
                     </ion-button>
-                    <ion-button  color="primary"  size="small"
-                    style="margin: 5px;">
-                    <ion-icon name="person-add"></ion-icon><ion-label>Ver mas</ion-label>
-                  </ion-button>
                   </div>
-                  <div style="background: #8ea8b3; margin-bottom: 10px; padding: 10px; border-radius: 5px;">
-                    <ion-label class="bold_lbl">Cuentas</ion-label>
-                    <ion-row *ngFor="let c of filtroCuentaAgua(P.id)">
-                      <ion-col size="auto"><ion-icon name="water"></ion-icon></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>Numuero Ciente:</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
-                      <ion-col size="auto" *ngFor="let G of filtroGasto(c.numCliente) "><ion-label>${{G.Total
-                          }}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
-                    </ion-row>
-                    <ion-row *ngFor="let c of filtroCuentaLuz(P.id)">
-                      <ion-col size="auto"><ion-icon name="flash"></ion-icon></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>${{G.Total}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
-                    </ion-row>
-                    <ion-row *ngFor="let c of filtroCuentaGas(P.id)">
-                      <ion-col size="auto"><ion-icon name="flame"></ion-icon></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>${{G.Total}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
-                    </ion-row>
-                    <ion-row *ngFor="let c of filtroCuentaInternet(P.id)">
-                      <ion-col size="auto"><ion-icon name="globe"></ion-icon></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>${{G.Total}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
-                    </ion-row>
-                    <ion-row *ngFor="let c of filtroCuentaArriendo(P.id)">
-                      <ion-col size="auto"><ion-icon name="business-outline"></ion-icon></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>${{G.Total}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
-                    </ion-row>
-                    <ion-row *ngFor="let c of filtroCuentaGGCC(P.id)">
-                      <ion-col size="auto"><ion-icon name="newspaper-outline"></ion-icon></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
-                      <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>${{G.Total}}</ion-label></ion-col>
-                      <ion-col size="auto"
-                        *ngFor="let G of filtroGasto(c.numCliente)"><ion-label>{{G.Estado}}</ion-label></ion-col>
-                    </ion-row>
-                    <ion-col *ngFor="let gastos of gastos" size="auto"><ion-label></ion-label></ion-col>
+                  <div  *ngIf="P.estado == 'Activa'"  style="background: #8ea8b3; margin-bottom: 10px; padding: 10px; border-radius: 5px;">
+                    <ion-label class="bold_lbl">Contactos</ion-label>
+                    <ion-grid *ngFor="let c of filtroCuentaAgua(P.id)">
+                      <ion-row>
+                        <ion-col size="auto"><ion-icon name="water"></ion-icon></ion-col>
+                        <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>Numuero Ciente:</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
+                      </ion-row>
+                      <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
+                        <ion-col size="auto"><ion-label>N°: {{G.Num_documento}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>Vcto: {{G.fecha_vencimiento}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>${{G.Total}}</ion-label></ion-col>
+                        <ion-col size="auto">
+                          <ion-label style="padding-left: 5px; padding-right: 5px; border-radius: 5px;"
+                            [ngStyle]="{'background':G.Estado === 'Vencida' ? '#f40716ba' :'#2dd36f'}">
+                            {{G.Estado}}</ion-label></ion-col>
+                      </ion-row>
+                    </ion-grid>
+                    <ion-grid *ngFor="let c of filtroCuentaLuz(P.id)">
+                      <ion-row>
+                        <ion-col size="auto"><ion-icon name="flash"></ion-icon></ion-col>
+                        <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
+                      </ion-row>
+                      <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
+                        <ion-col size="auto"><ion-label>N°: {{G.Num_documento}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>Vcto: {{G.fecha_vencimiento}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>${{G.Total}}</ion-label></ion-col>
+                        <ion-col size="auto">
+                          <ion-label style="padding-left: 5px; padding-right: 5px; border-radius: 5px;"
+                            [ngStyle]="{'background':G.Estado === 'Vencida' ? '#f40716ba' :'#2dd36f'}">
+                            {{G.Estado}}</ion-label></ion-col>
+                      </ion-row>
+                    </ion-grid>
+                    <ion-grid *ngFor="let c of filtroCuentaGas(P.id)">
+                      <ion-row>
+                        <ion-col size="auto"><ion-icon name="flame"></ion-icon></ion-col>
+                        <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
+                      </ion-row>
+                      <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
+                        <ion-col size="auto"><ion-label>N°: {{G.Num_documento}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>Vcto: {{G.fecha_vencimiento}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>${{G.Total}}</ion-label></ion-col>
+                        <ion-col size="auto">
+                          <ion-label style="padding-left: 5px; padding-right: 5px; border-radius: 5px;"
+                            [ngStyle]="{'background':G.Estado === 'Vencida' ? '#f40716ba' :'#2dd36f'}">
+                            {{G.Estado}}</ion-label></ion-col>
+                      </ion-row>
+                    </ion-grid>
+                    <ion-grid *ngFor="let c of filtroCuentaInternet(P.id)">
+                      <ion-row>
+                        <ion-col size="auto"><ion-icon name="globe"></ion-icon></ion-col>
+                        <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
+                      </ion-row>
+                      <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
+                        <ion-col size="auto"><ion-label>N°: {{G.Num_documento}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>Vcto: {{G.fecha_vencimiento}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>${{G.Total}}</ion-label></ion-col>
+                        <ion-col size="auto">
+                          <ion-label style="padding-left: 5px; padding-right: 5px; border-radius: 5px;"
+                            [ngStyle]="{'background':G.Estado === 'Vencida' ? '#f40716ba' :'#2dd36f'}">
+                            {{G.Estado}}</ion-label></ion-col>
+                      </ion-row>
+                    </ion-grid>
+                    <ion-grid *ngFor="let c of filtroCuentaArriendo(P.id)">
+                      <ion-row>
+                        <ion-col size="auto"><ion-icon name="business-outline"></ion-icon></ion-col>
+                        <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
+                      </ion-row>
+                      <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
+                        <ion-col size="auto"><ion-label>N°: {{G.Num_documento}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>Vcto: {{G.fecha_vencimiento}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>${{G.Total}}</ion-label></ion-col>
+                        <ion-col size="auto">
+                          <ion-label style="padding-left: 5px; padding-right: 5px; border-radius: 5px;"
+                            [ngStyle]="{'background':G.Estado === 'Vencida' ? '#f40716ba' :'#2dd36f'}">
+                            {{G.Estado}}</ion-label></ion-col>
+                      </ion-row>
+                    </ion-grid>
+                    <ion-grid *ngFor="let c of filtroCuentaGGCC(P.id)">
+                      <ion-row>
+                        <ion-col size="auto"><ion-icon name="newspaper-outline"></ion-icon></ion-col>
+                        <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
+                      </ion-row>
+                      <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
+                        <ion-col size="auto"><ion-label>N°: {{G.Num_documento}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>Vcto:{{G.fecha_vencimiento}}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>${{G.Total}}</ion-label></ion-col>
+                        <ion-col size="auto">
+                          <ion-label style="padding-left: 5px; padding-right: 5px; border-radius: 5px;"
+                            [ngStyle]="{'background':G.Estado === 'Vencida' ? '#f40716ba' :'#2dd36f'}">
+                            {{G.Estado}}</ion-label></ion-col>
+                      </ion-row>
+                    </ion-grid>
                     <ion-button [routerLink]="['/cuentas']" (click)="addContacto(P)" color="primary" size="small"
                       style="margin: 5px;">
-                      <ion-icon name="add-circle-outline"></ion-icon>
-                      <ion-label>Cuentas</ion-label>
+                      <ion-icon name="add-circle-outline"></ion-icon><ion-label>Cuentas</ion-label>
                     </ion-button>
-                    <ion-button   color="primary"  size="small"
-                    style="margin: 5px;">
-                    <ion-icon name="add-circle-outline"></ion-icon><ion-label>Ver mas</ion-label>
-                  </ion-button>
                   </div>
-                  <ion-row>
+                  <ion-row  *ngIf="P.estado == 'Activa'" >
                     <ion-col size="auto"> <ion-button size="small" color="dark">
                         <ion-label>Finalizar Arriendo</ion-label>
-                      </ion-button>
-                    </ion-col>
-                    <ion-col size="auto">
-                      <ion-button size="small" color="dark">
+                      </ion-button></ion-col>
+                    <ion-col size="auto"> <ion-button size="small" color="dark">
                         <ion-label>Nuevo Arrendatario</ion-label>
-                      </ion-button>
-                    </ion-col>
-                    <ion-col size="auto">
-                      <ion-button size="small" color="dark">
+                      </ion-button></ion-col>
+                    <ion-col size="auto"><ion-button size="small" color="dark">
                         <ion-label>Condicion del inmueble</ion-label>
-                      </ion-button>
-                    </ion-col>
+                      </ion-button></ion-col>
                   </ion-row>
                   <ion-row  *ngIf="P.estado == 'Activa'" >
                     <ion-col size="auto">
                       <ion-button (click)="newPropiedad = P; enableNewPropiedad = true; enablelista = false "
                         color="warning" size="small">
                         <ion-icon name="create-outline"></ion-icon>
-                      </ion-button>
-                    </ion-col>
+                      </ion-button></ion-col>
                     <ion-col size="auto">
                       <ion-button (click)="deletePropiedad(P)" color="danger" size="small">
                         <ion-icon name="trash-outline"></ion-icon>
@@ -267,6 +283,9 @@
           </ion-accordion-group>
         </ion-card>
       </div>
+
+
+
     </ion-card>
   </div>
 </ion-content>
