--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -140,8 +140,7 @@
           <ion-button style="margin-top: 20px;" (click)="guardarUser()" expand="block" size="small">guardar</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button style="margin-top: 10px;" (click)="salir()" expand="block" size="small">Cerrar
-            cesion</ion-button>
+          <ion-button style="margin-top: 10px;" (click)="salir()" expand="block" size="small">Cerrar Sesión</ion-button>
         </ion-col>
       </ion-card-content>
     </ion-card>
