--- a/src/app/backend/allcuentas/allcuentas.component.html
+++ b/src/app/backend/allcuentas/allcuentas.component.html
@@ -35,11 +35,9 @@
               <ion-col size="auto">
                 <ion-label class="small_lbl">{{c.empresa}}</ion-label>
               </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col size="auto"></ion-col>
-              <ion-col size="auto"><ion-label class="small_lbl">CLIENTE:</ion-label></ion-col>
-              <ion-col size="auto"><ion-label class="small_lbl">{{c.numCliente}}</ion-label></ion-col>
+              <ion-col size="auto">
+                <ion-label class="small_lbl">CLIENTE: {{c.numCliente}}</ion-label>
+              </ion-col>
             </ion-row>
             <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
               <ion-col size="auto"><ion-label class="small_lbl">N°: {{G.Num_documento}}</ion-label></ion-col>
