--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,7 +8,11 @@
       <ion-button (click)="filterProperties()">
         <ion-icon name="search-outline"></ion-icon>
       </ion-button>
-
+    </ion-buttons>
+    <ion-buttons  (click)="goPerfil()" slot="end">
+      <ion-button >
+        <ion-icon slot="icon-only" name="person-circle"></ion-icon>
+      </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
