--- a/src/app/pages/bienvenido/bienvenido.page.html
+++ b/src/app/pages/bienvenido/bienvenido.page.html
@@ -7,7 +7,7 @@
                 
           
       
-        <ion-label class="simple_lbl">¡Bienvenido a tu nueva aplicación de gestión inmobiliaria! </ion-label>
+        <ion-label class="simple_lbl">¡Bienvenido a tu nueva aplicación de gestión de Propiedades! </ion-label>
           <ion-label class="simple_lbl">Estamos encantados de tenerte a bordo y estamos seguros de que esta plataforma será una herramienta valiosa y util.</ion-label>
         </div>
       
