--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -3,9 +3,12 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-input type="text" placeholder="Buscar propiedades">
-      <ion-icon name="search"></ion-icon>
-    </ion-input>
+    <ion-input type="text" placeholder="Buscar propiedades" [(ngModel)]="searchTerm"></ion-input>
+    <ion-buttons slot="end">
+      <ion-button (click)="filterProperties()">
+        <ion-icon name="search-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-buttons slot="end">
       <ion-button (click)="goPerfil()">
         <ion-icon slot="icon-only" name="person-circle"></ion-icon>
