--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -123,17 +123,19 @@
         <ion-item>
           <ion-label class="small_lbl">Correo: {{cliente.email}}</ion-label>
         </ion-item>
-        <ion-item>
-          <ion-label class="small_lbl">Editar Foto</ion-label>
-          <ion-buttons>
-            <ion-button>
-              <label for="file-upload">
-                <ion-icon slot="icon-only" name="images-outline"></ion-icon>
-              </label>
-              <input (change)="newImageUpload($event)" id="file-upload" type="file" accept="image/*">
-            </ion-button>
-          </ion-buttons>
-        </ion-item>
+    <ion-item>
+  <ion-label class="small_lbl">Editar Foto</ion-label>
+  <ion-buttons>
+    <input hidden (change)="newImageUpload($event)" id="file-upload" type="file" accept="image/*">
+    <ion-button>
+      <label for="file-upload">
+        <ion-icon slot="icon-only" name="images-outline"></ion-icon>
+      </label>
+    </ion-button>
+  </ion-buttons>
+</ion-item>
+
+
 
 
         <ion-col>
